2005-10-26  Tom Tromey  <tromey@redhat.com>

	* compiler.cc (compiler): Default to 1.4 language.
	* model/classref.cc (resolve): Use correct type for generic
	class.

2005-10-26  Tom Tromey  <tromey@redhat.com>

	* unify.cc (unifier::compute_lcta): Handle case of two unbound
	wildcards.
	(unifier::unify): Handle case where 'actual' is a raw type.
	(unifier::compute_super_types): Resolve classes of 'klass'.

2005-10-26  Tom Tromey  <tromey@redhat.com>

	* model/import.cc (resolve): Error if name is not canonical.
	* model/class.cc (get_canonical_name): New method.
	* model/class.hh (model_class::get_canonical_name): Declare.

2005-10-26  Tom Tromey  <tromey@redhat.com>

	* compiler.cc (do_analyze_unit): Catch exceptions from
	check_imports.

2005-10-26  Tom Tromey  <tromey@redhat.com>

	* model/unit.cc (look_up_name): Use local_scope.
	(look_up_name): Resolve imports.
	(check_imports): Use local_scope.
	* model/unit.hh (model_unit_source::local_scope): New field.
	(model_unit_source): Call push_on_scope.

2005-10-25  Tom Tromey  <tromey@redhat.com>

	* model/cond.cc (resolve): Use compute_lub.
	* unify.hh (compute_lub): Declare.
	* unify.cc (unifier::compute_lub): Now public.
	(unifier::unifier): New constructor.
	(unify): Updated.
	(compute_lub): New method.

2005-10-25  Tom Tromey  <tromey@redhat.com>

	* model/class.cc (get_fully_qualified_name): Only dereference
	compilation unit if it exists.

2005-10-25  Tom Tromey  <tromey@redhat.com>

	* source/parse.cc (counted_type): Don't look for [] if multiple
	<> were closed at once.

2005-10-25  Tom Tromey  <tromey@redhat.com>

	* model/classinst.hh (model_class_instance::resolve_hook):
	Removed.
	* model/classinst.cc (resolve_member_hook): Create member classes
	here.
	(resolve_hook): Removed.

2005-10-25  Tom Tromey  <tromey@redhat.com>

	* model/method.hh (model_method::same_arguments_p): Added
	argument.
	* model/method.cc (same_arguments_p): Use const_cast.  Added
	argument.