@@ -46,7 +46,9 @@ model_class_ref::resolve (resolution_scope *scope)
   model_class *dest = global->get_compiler ()->java_lang_Class ();
   if (global->get_compiler ()->feature_generics ())
     {
-      model_type *boxed = boxing_conversion (klass->type ());
+      model_type *boxed = klass->type ();
+      if (boxed->primitive_p ())
+	boxed = box_primitive_type (boxed);
       model_class *boxed_class = assert_cast<model_class *> (boxed);
 
       std::list<model_class *> args;
